k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engagement-backend
spec:
  replicas: 1
  selector:
    matchLabels: { app: engagement-backend }
  template:
    metadata:
      labels: { app: engagement-backend }
    spec:
      containers:
        - name: backend
          image: engagement-backend:v1
          imagePullPolicy: Never
          ports: [{ containerPort: 8080 }]
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8080 }
            initialDelaySeconds: 20
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8080 }
            initialDelaySeconds: 10
          resources:
            requests:
               cpu: "200m"
               memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: engagement-backend
spec:
  selector: { app: engagement-backend }
  ports: [{ port: 8080, targetPort: 8080 }]
